--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Modificar.cshtml
@@ -555,9 +555,8 @@
         GridViewPartial_deudas_dc.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
     function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["IdCtaCble"] = GridViewPartial_deudas_dc.GetEditor("IdCtaCble").GetValue();
-        e.customArgs["IdSucursal"] = $('#IdSucursal').val();
-        e.customArgs["co_FechaFactura"] = co_FechaFactura.GetValue();
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+        e.customArgs["pre_fecha"] = moment(co_FechaFactura.GetDate()).format('DD/MM/YYYY');
     }
 
     $(function () {
