--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -13,98 +13,104 @@
     @Html.HiddenFor(q => q.IdEmpresa);
     @Html.HiddenFor(q => q.IdRol);
 
-<div class="row">
-    <div class="col-md-12">
+    <div class="row">
         <div class="col-md-12">
-            <div class="form-group">
-                <label for="FechaInicio">Nómina*</label>
-                @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_Tipo" })
-                @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="FechaInicio">Nómina*</label>
+                    @Html.DropDownListFor(q => q.IdNomina_Tipo, new SelectList(ViewBag.lst_nomina, "IdNomina_Tipo", "Descripcion"), new { @class = "form-control", @id = "IdNomina_Tipo" })
+                    @Html.ValidationMessageFor(q => q.IdNomina_Tipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="FechaInicio">Proceso de la nómina*</label>
+                    @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
+                    @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
+
+    <div class="row">
         <div class="col-md-12">
-            <div class="form-group">
-                <label for="FechaInicio">Proceso de la nómina*</label>
-                @Html.DropDownListFor(q => q.IdNomina_TipoLiqui, new SelectList(ViewBag.lst_nomina_tipo, "IdNomina_TipoLiqui", "DescripcionProcesoNomina"), "== Seleccione ==", new { @class = "form-control", @id = "IdNomina_TipoLiqui" })
-                @Html.ValidationMessageFor(q => q.IdNomina_TipoLiqui, "", new { @class = "text-danger" })
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="FechaInicio">Periodo*</label>
+                    @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), new { @class = "form-control", @id = "IdPeriodo" })
+                    @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="FechaInicio">Periodo*</label>
-                @Html.DropDownListFor(q => q.IdPeriodo, new SelectList(ViewBag.lst_periodos, "IdPeriodo", "Descripcion"), "== Seleccione ==", new { @class = "form-control", @id = "IdPeriodo" })
-                @Html.ValidationMessageFor(q => q.IdPeriodo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="ca_descripcion">Descripción*</label>
-                @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "text-danger" })
 
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="ca_descripcion">Descripción*</label>
+                    @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Observacion, "", new { @class = "text-danger" })
+
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="box-footer">
-    <button type="submit" class="btn btn-primary">Procesar</button>
-    <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
-</div>
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Procesar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","ProcesarRol",new { Area = "RRHH" },null)">Cancelar</a>
+    </div>
 
-<div id="Tabs" role="tabpanel">
-    <ul class="nav nav-tabs" role="tablist">
-        <li class="active">
-            <a href="#tab_estadisticas" aria-controls="datos" role="tab" data-toggle="tab">Empleados sin sueldo a percibir</a>
-        </li>
-        <li>
-            <a href="#tab_contratos_por_vencer" aria-controls="diario" role="tab" data-toggle="tab">Contratos por vencer</a>
-        </li>
-    </ul>
-    <div class="tab-content" style="padding-top: 20px">
-        <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_estadisticas">
-            <div class="row">
-                <div class="col-md-12">
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_estadisticas" aria-controls="datos" role="tab" data-toggle="tab">Empleados sin sueldo a percibir</a>
+            </li>
+            <li>
+                <a href="#tab_contratos_por_vencer" aria-controls="diario" role="tab" data-toggle="tab">Contratos por vencer</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_estadisticas">
+                <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group">
-                            @Html.Action("GridViewPartial_empleados_sin_percibir_sueldo", new { Area = "RRHH", Controller = "ProcesarRol", IdRol =ViewBag.IdRol})
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_empleados_sin_percibir_sueldo", new { Area = "RRHH", Controller = "ProcesarRol", IdRol = ViewBag.IdRol })
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contratos_por_vencer">
-            <div class="row">
-                <div class="col-md-12">
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contratos_por_vencer">
+                <div class="row">
                     <div class="col-md-12">
-                        <div class="form-group">
-                            @Html.Action("GridViewPartial_contratos_por_vencer", new { Area = "RRHH", Controller = "Contrato", ViewBag.FechaCorte })
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_contratos_por_vencer", new { Area = "RRHH", Controller = "Contrato", ViewBag.FechaCorte })
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+
         </div>
-
-
     </div>
-</div>
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
 
 
