--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_Factura_importacion.cshtml
@@ -49,10 +49,9 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdSucursal", "Establecimiento").Width = Unit.Percentage(10);
-        settings.Columns.Add("Ruc", "RUC").Width = Unit.Percentage(10);
-        settings.Columns.Add("CodNota", "Documento").Width = Unit.Percentage(20);
-        settings.Columns.Add("sc_total", "Total").Width = Unit.Percentage(10);
-        settings.Columns.Add("sc_saldo", "Saldo").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdBodega", "IdBodega").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdCliente", "IdCliente").Width = Unit.Percentage(10);
+        settings.Columns.Add("CodNota", "Documento").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "no_fecha";
