--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -26,6 +26,13 @@
 
         CargarEstadoAprobacion();
     });
+    function OnSelectedCtaCbleChanged() {
+        GridViewPartial_orden_pago_dc.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+        e.customArgs["pre_fecha"] = moment(Fecha.GetDate()).format('DD/MM/YYYY');
+    }
     var selectedIDs;
     function OnBeginCallback(s, e) {
         e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
