--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -68,7 +68,7 @@
 @using (Html.BeginForm("Modificar", "OrdenPago", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa"})
     @Html.HiddenFor(q => q.IdOrdenPago)
     @Html.HiddenFor(q => q.IdPersona)
     @Html.HiddenFor(q => q.IdEstadoAprobacion)
@@ -275,9 +275,9 @@
             IdTipo_op: IdTipo_op.GetValue(),
             IdEntidad: IdEntidad.GetValue(),
             Valor_a_pagar: $("#Valor_a_pagar").val(),
-            observacion: $("#observacion").val()
-
-
+            observacion: $("#observacion").val(),
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
