--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Importar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Importar.cshtml
@@ -34,7 +34,7 @@
         GridViewPartial_Turno_importacion.PerformCallback();
         GridViewPartial_Empleado_importacion.PerformCallback();
         GridViewPartial_Contrato_importacion.PerformCallback();
-        //GridViewPartial_CargaFamiliar_importacion.PerformCallback();
+        GridViewPartial_CargaFamiliar_importacion.PerformCallback();
         //GridViewPartial_ProvisionesAcumuladas_importacion.PerformCallback();
         //GridViewPartial_Vacaciones_importacion.PerformCallback();
     }
@@ -163,7 +163,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-                            @*@Html.Action("GridViewPartial_CargaFamiliar_importacion")*@
+                            @Html.Action("GridViewPartial_CargaFamiliar_importacion")
                         </div>
                     </div>
                 </div>
