--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_Contrato_importacion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_Contrato_importacion.cshtml
@@ -49,7 +49,8 @@
                 e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
         };
         settings.Columns.Add("IdContrato", "Codigo").Width = Unit.Percentage(10);
-        settings.Columns.Add("contrato_tipo_descripcion", "Descripción").Width = Unit.Percentage(20);
+        settings.Columns.Add("IdEmpleado", "IdEmpleado").Width = Unit.Percentage(10);
+        settings.Columns.Add("contrato_tipo_descripcion", "Descripción").Width = Unit.Percentage(30);
         settings.Columns.Add("FechaInicio", "Cta Mejora").Width = Unit.Percentage(10);
         settings.Columns.Add("FechaFin", "%").Width = Unit.Percentage(10);
         settings.Columns.Add("Sueldo", "Años").Width = Unit.Percentage(10);
