--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -90,7 +90,9 @@
 
         var datos = {
             IDs: selectedIDs,
-            IdTransaccionFixed: $("#IdTransaccionSession").val()
+            IdTransaccionFixed: $("#IdTransaccionSession").val(),
+            IdCaja: $("#IdCaja").val(),
+            IdEmpresa: $("#IdEmpresa").val()
         }
         $.ajax({
             type: 'POST',
