--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas_x_cruzar.cshtml
@@ -60,6 +60,7 @@
         });
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
         settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdCajaConciliacion'] = $('#IdCaja').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
